// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`genContextBrain.integration discovery mode (async path) given: [case4] discovery mode with invalid choice when: [t0] generic choice does not match any discovered brain then: throws BrainChoiceNotFoundError with actionable message 1`] = `
"BrainChoiceNotFoundError: brain not found: nonexistent/brain-slug-xyz

🔭 available brains
   ├── ↻ openai/codex
   ├── ○ openai/gpt/4o
   ├── ○ fireworks/qwen/3.7-plus
   ├── ○ fireworks/glm/5.2
   ├── ○ fireworks/glm/5.1
   ├── ○ fireworks/minimax/m3
   ├── ○ fireworks/minimax/2.7
   ├── ○ xai/grok/code-fast-1
   ├── ○ xai/grok/3-mini
   ├── ○ anthropic/claude/haiku
   ├── ○ anthropic/claude/sonnet
   ├── ○ anthropic/claude/opus
   ├── ○ fireworks/kimi/k2.7-code
   ├── ○ fireworks/kimi/k2.6
   ├── ○ fireworks/gpt-oss/120b
   ├── ○ fireworks/gpt-oss/20b
   ├── ○ xai/grok/3
   ├── ○ xai/grok/4
   ├── ↻ anthropic/claude/code
   ├── ○ fireworks/deepseek/v4-pro
   ├── ○ xai/grok/4-fast-wout-reason
   └── (and 7 more)

{
  "choice": "nonexistent/brain-slug-xyz",
  "available": {
    "atoms": [
      "anthropic/claude/haiku",
      "anthropic/claude/sonnet",
      "anthropic/claude/opus",
      "fireworks/deepseek/v4-pro",
      "fireworks/deepseek/v4-flash",
      "fireworks/kimi/k2.7-code",
      "fireworks/kimi/k2.6",
      "fireworks/qwen/3.7-plus",
      "fireworks/glm/5.2",
      "fireworks/glm/5.1",
      "fireworks/minimax/m3",
      "fireworks/minimax/2.7",
      "fireworks/gpt-oss/120b",
      "fireworks/gpt-oss/20b",
      "openai/gpt/4o",
      "xai/grok/code-fast-1",
      "xai/grok/3",
      "xai/grok/3-mini",
      "xai/grok/4",
      "xai/grok/4-fast-wout-reason",
      "xai/grok/4-fast-with-reason",
      "xai/grok/4.1-fast-wout-reason",
      "xai/grok/4.1-fast-with-reason"
    ],
    "repls": [
      "anthropic/claude/code",
      "anthropic/claude/code/haiku",
      "anthropic/claude/code/sonnet",
      "anthropic/claude/code/opus",
      "openai/codex"
    ]
  }
}"
`;

exports[`genContextBrain.integration discovery mode (async path) given: [case4] discovery mode with invalid choice when: [t1] typed repl choice does not match then: throws BrainChoiceNotFoundError with repls in message 1`] = `
"BrainChoiceNotFoundError: repl brain not found: nonexistent/repl-xyz

🔭 available brains
   ├── ↻ openai/codex
   ├── ↻ anthropic/claude/code
   ├── ↻ anthropic/claude/code/haiku
   ├── ↻ anthropic/claude/code/opus
   └── ↻ anthropic/claude/code/sonnet

{
  "choice": {
    "repl": "nonexistent/repl-xyz"
  },
  "available": {
    "repls": [
      "anthropic/claude/code",
      "anthropic/claude/code/haiku",
      "anthropic/claude/code/sonnet",
      "anthropic/claude/code/opus",
      "openai/codex"
    ]
  }
}"
`;

exports[`genContextBrain.integration discovery mode (async path) given: [case4] discovery mode with invalid choice when: [t2] typed atom choice does not match then: throws BrainChoiceNotFoundError with atoms in message 1`] = `
"BrainChoiceNotFoundError: atom brain not found: nonexistent/atom-xyz

🔭 available brains
   ├── ○ openai/gpt/4o
   ├── ○ fireworks/glm/5.2
   ├── ○ fireworks/glm/5.1
   ├── ○ xai/grok/3
   ├── ○ xai/grok/3-mini
   ├── ○ xai/grok/4
   ├── ○ fireworks/minimax/m3
   ├── ○ fireworks/kimi/k2.6
   ├── ○ fireworks/qwen/3.7-plus
   ├── ○ fireworks/minimax/2.7
   ├── ○ fireworks/gpt-oss/120b
   ├── ○ fireworks/gpt-oss/20b
   ├── ○ anthropic/claude/haiku
   ├── ○ anthropic/claude/opus
   ├── ○ fireworks/kimi/k2.7-code
   ├── ○ xai/grok/code-fast-1
   ├── ○ anthropic/claude/sonnet
   ├── ○ fireworks/deepseek/v4-pro
   ├── ○ fireworks/deepseek/v4-flash
   ├── ○ xai/grok/4-fast-wout-reason
   ├── ○ xai/grok/4-fast-with-reason
   └── (and 2 more)

{
  "choice": {
    "atom": "nonexistent/atom-xyz"
  },
  "available": {
    "atoms": [
      "anthropic/claude/haiku",
      "anthropic/claude/sonnet",
      "anthropic/claude/opus",
      "fireworks/deepseek/v4-pro",
      "fireworks/deepseek/v4-flash",
      "fireworks/kimi/k2.7-code",
      "fireworks/kimi/k2.6",
      "fireworks/qwen/3.7-plus",
      "fireworks/glm/5.2",
      "fireworks/glm/5.1",
      "fireworks/minimax/m3",
      "fireworks/minimax/2.7",
      "fireworks/gpt-oss/120b",
      "fireworks/gpt-oss/20b",
      "openai/gpt/4o",
      "xai/grok/code-fast-1",
      "xai/grok/3",
      "xai/grok/3-mini",
      "xai/grok/4",
      "xai/grok/4-fast-wout-reason",
      "xai/grok/4-fast-with-reason",
      "xai/grok/4.1-fast-wout-reason",
      "xai/grok/4.1-fast-with-reason"
    ]
  }
}"
`;
